--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,16 @@ spring:
     url: jdbc:mysql://localhost:3306/ct_manager?serverTimezone=GMT%2B8&amp
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
+  thymeleaf:
+    prefix: classpath:/static/
+    suffix: .html
+  resources:
+    static-locations: classpath:/static
+  mvc:
+    static-path-pattern: /**
+
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: ct.com.manager.dao.UserDao
+
